--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 	body, .formjs, .formjs-sm, .formjs-lg {
 		font-family: "Quicksand", serif;
 	}
+	::-moz-selection {
+	background: #b3d4fc;
+	text-shadow: none;
+	}
+	::selection {
+	background: #b3d4fc;
+	text-shadow: none;
+	}
 	.container {
 		margin: 100px auto;
 		max-width: 800px;
