--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Merienda|Quicksand" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/grid.css">
 	<link rel="stylesheet" type="text/css" href="css/formjs.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<style type="text/css">
 	body, .formjs, .formjs-sm, .formjs-lg {
 		font-family: "Quicksand", serif;
