--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 		<h1>Form JS Framework</h1>
 		<p>A Classic Form Styling With Ease</p>
 		<p class="love">Made with <span class="fa fa-heart"></span> by Abdalla Arbab</p>
+		<a href="https://github.com/the94air/formjs/archive/master.zip" class="formjs formjs-danger formjs-lg">Download</a>
 	</div>
 </section>
 		
