--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Form JS</title>
+	<meta name="description" content="A Classic Form Styling With Ease using javascript, css and jQuery. Remember it is a simple framework only for your forms. Have fun.">
+	<title>Form JS Framework</title>
 	<link href="https://fonts.googleapis.com/css?family=Merienda|Quicksand" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/grid.css">
 	<link rel="stylesheet" type="text/css" href="css/formjs.css">
