--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
 </section>
 
 <section class="row">
-<div class="col col-5-of-12">
+<div class="col col-5-of-12" style="overflow: hidden">
 
 			<div>
 				<label class="input-label-sm">Small file input</label>
