--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" type="text/css" href="css/grid.css">
 	<link rel="stylesheet" type="text/css" href="css/formjs.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/themes/prism.min.css">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<style type="text/css">
 	body, .formjs, .formjs-sm, .formjs-lg {
 		font-family: "Quicksand", serif;
@@ -40,7 +39,6 @@
 	}
 	.header p.love {
 		font-size: 15px;
-		margin-bottom: 40px;
 	}
 	@-webkit-keyframes animateHeart {
 		0%  { -webkit-transform: scale(1); }
@@ -63,6 +61,9 @@
 		-webkit-animation: animateHeart 2.5s infinite;
 		animation: animateHeart 2.5s infinite;
 	}
+	.download {
+		margin-bottom: 40px;
+	}
 	.language-markup {
 		font-size: 85%;
 	}
@@ -81,7 +82,7 @@
 		<h1>Form JS Framework</h1>
 		<p>A Classic Form Styling With Ease</p>
 		<p class="love">Made with <span class="fa fa-heart"></span> by Abdalla Arbab</p>
-		<a href="https://github.com/the94air/formjs/archive/master.zip" class="formjs formjs-danger formjs-lg">Download</a>
+		<a href="https://github.com/the94air/formjs/archive/master.zip" class="formjs formjs-danger formjs-lg download">Download</a>
 	</div>
 </section>
 		
