--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 		-webkit-animation: animateHeart 2.5s infinite;
 		animation: animateHeart 2.5s infinite;
 	}
-	.download {
-		margin-bottom: 40px;
+	#download {
+		margin: 20px 0 70px 0;
 	}
 	.language-markup {
 		font-size: 85%;
