--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<h1>Form JS Framework</h1>
 		<p>A Classic Form Styling With Ease</p>
 		<p class="love">Made with <span class="fa fa-heart"></span> by Abdalla Arbab</p>
-		<a href="https://github.com/the94air/formjs/archive/master.zip" class="formjs formjs-danger formjs-lg download">Download</a>
+		<a href="https://github.com/the94air/formjs/archive/master.zip" class="formjs formjs-danger formjs-lg" id="download">Download</a>
 	</div>
 </section>
 		
