--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Form JS Framework</title>
 	<link href="https://fonts.googleapis.com/css?family=Merienda|Quicksand" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/grid.css">
-	<link rel="stylesheet" type="text/css" href="css/formjs.css">
+	<link rel="stylesheet" type="text/css" href="css/formjs.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/themes/prism.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<style type="text/css">
