--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 		<h1>Form JS Framework</h1>
 		<p>A Classic Form Styling With Ease</p>
 		<p class="love">Made with <span class="fa fa-heart"></span> by Abdalla Arbab</p>
+		<a class="github-button" href="https://github.com/the94air/formjs" data-icon="octicon-star" data-style="mega" aria-label="Star the94air/formjs on GitHub">Star</a>
+		<a href="https://twitter.com/intent/tweet?screen_name=abdalla__arbab" class="twitter-mention-button" data-show-count="false">Tweet to @abdalla__arbab</a>
 		<a href="https://github.com/the94air/formjs/archive/master.zip" class="formjs formjs-danger formjs-lg" id="download">Download</a>
 	</div>
 </section>
@@ -871,5 +873,7 @@
 
 <script type="text/javascript" src="js/formjs.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/prism.min.js"></script>
+<script async defer src="https://buttons.github.io/buttons.js"></script>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
