--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	<div class="header">
 		<h1>Form JS Framework</h1>
 		<p>A Classic Form Styling With Ease</p>
-		<p class="love">Made with <span class="fa fa-heart"></span> by Abdalla Arbab</p>
+		<p class="love">Made with <span class="fa fa-heart"></span> by Abdalla Arbab</p><br>
 		<a class="github-button" href="https://github.com/the94air/formjs" data-icon="octicon-star" data-style="mega" aria-label="Star the94air/formjs on GitHub">Star</a>
 		<a href="https://twitter.com/intent/tweet?screen_name=abdalla__arbab" class="twitter-mention-button" data-show-count="false">Tweet to @abdalla__arbab</a><br>
 		<a href="https://github.com/the94air/formjs/archive/master.zip" class="formjs formjs-danger formjs-lg" id="download">Download</a>
